--- a/src/components/style.css
+++ b/src/components/style.css
@@ -12,7 +12,7 @@
 }
 .header{
     grid-area: header;
-    background: #333;
+    background: #d70000;
     color: white;
     display: flex;
     align-items: center;
@@ -22,7 +22,7 @@
 
 .sidebar {
     grid-area: sidebar;
-    background: #c5c0c0;
+    background: #00ddff;
     padding: 20px;
   }
 
